--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,6 +2,19 @@ version: '3.7'
 
 services:
 
+  client:
+    container_name: client
+    build:
+        context: ./services/client
+        dockerfile: Dockerfile-prod
+        args:
+          - NODE_ENV=production
+          - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+    ports:
+      - '3007:80'
+    depends_on:
+      - users
+
   users:
     build:
       context: ./services/users
@@ -35,3 +48,4 @@ services:
       - 80:80
     depends_on:
       - users
+      - client
