--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,26 @@ version: '3.7'
 
 services:
 
+  client:
+    build:
+      context: ./services/client
+      dockerfile: Dockerfile
+    volumes:
+      - './services/client:/usr/src/app'
+      - '/usr/src/app/node_modules'
+    ports:
+      - 3007:3000
+    environment:
+      - NODE_ENV=development
+      - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+    depends_on:
+      - users
+
   users:
     build:
       context: ./services/users
       dockerfile: Dockerfile
-    volumes:
+    volumes: # volumes for workdir of app and client(react)
       - './services/users:/usr/src/app'
     ports:
       - 5001:5000
@@ -37,3 +52,4 @@ services:
       - 80:80
     depends_on:
       - users
+      - client
