--- a/services/users/Dockerfile-prod
+++ b/services/users/Dockerfile-prod
@@ -13,7 +13,7 @@ WORKDIR /usr/src/app
 
 # add and install requirements
 COPY ./requirements.txt /usr/src/app/requirements.txt
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
 
 # add entrypoint-prod.sh
 COPY ./entrypoint-prod.sh /usr/src/app/entrypoint-prod.sh
