--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,19 +2,6 @@ version: '3.7'
 
 services:
 
-  client:
-    container_name: client
-    build:
-        context: ./services/client
-        dockerfile: Dockerfile-prod
-        args:
-          - NODE_ENV=production
-          - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
-    ports:
-      - '3007:80'
-    depends_on:
-      - users
-
   users:
     build:
       context: ./services/users
@@ -26,6 +13,7 @@ services:
       - APP_SETTINGS=project.config.ProductionConfig
       - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_prod
       - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test
+      - SECRET_KEY=${SECRET_KEY}
     depends_on:
       - users-db
 
@@ -38,6 +26,19 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+
+  client:
+    container_name: client
+    build:
+        context: ./services/client
+        dockerfile: Dockerfile-prod
+        args:
+          - NODE_ENV=production
+          - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+    ports:
+      - '3007:80'
+    depends_on:
+      - users    
 
   nginx:
     build:
