--- a/services/client/Dockerfile-prod
+++ b/services/client/Dockerfile-prod
@@ -26,6 +26,10 @@ RUN npm run build
 
 FROM nginx:1.15.9-alpine
 
+# update nginx conf
+RUN rm -rf /etc/nginx/conf.d
+COPY conf /etc/nginx
+
 # copy static build files
 COPY --from=builder /usr/src/app/build /usr/share/nginx/html
 
