--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "micro-app",
   "devDependencies": {
-    "cypress": "^3.4.1"
+    "cypress": "^3.4.1",
+    "randomstring": "^1.1.5"
   }
 }
