--- a/services/client/Dockerfile-prod
+++ b/services/client/Dockerfile-prod
@@ -37,4 +37,4 @@ COPY --from=builder /usr/src/app/build /usr/share/nginx/html
 EXPOSE 80
 
 #run nginx
-CMD ["nginx", "-g", "deamon off;"]
+CMD ["nginx", "-g", "daemon off;"]
