--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,3 +54,16 @@ services:
     depends_on:
       - users
       - client
+
+  swagger:
+    build:
+      context: ./services/swagger
+      dockerfile: Dockerfile
+    volumes:
+      - './services/swagger/swagger.json:/usr/share/nginx/html/swagger.json'
+    ports:
+      - 3008:8080
+    environment:
+      - URL=swagger.json
+    depends_on:
+      - users
