--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
   SECRET_KEY: my_precious
 
 before_install:
-  - chmod +x /services/users/entrypoint.sh
+#  - chmod +x /services/users/entrypoint.sh
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
@@ -29,7 +29,7 @@ before_script:
   - npm install
 
 script:
-  - bash test.sh stage
+  - bash test-ci.sh $TRAVIS_BRANCH
 
 after_success:
   - bash ./docker-push.sh
