--- a/services/users/Dockerfile-prod
+++ b/services/users/Dockerfile-prod
@@ -2,9 +2,9 @@
 FROM python:3.7.2-slim
 
 # install dependencies
-RUN apk update && \
-    apk add -y install netcat && \
-    apk add clean
+RUN apt-get update && \
+    apt-get add -y install netcat && \
+    apt-get add clean
 
 # set working directory
 WORKDIR /usr/src/app
