think i got CI aws ECR working...

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ env:
   DOCKER_COMPOSE_VERSION: 1.23.2
   COMMIT: ${TRAVIS_COMMIT::8}
   MAIN_REPO: https://github.com/atomek88/microservices.git
-  USERS: micro-users
+  USERS: micro_users
   USERS_REPO: ${MAIN_REPO}#${TRAVIS_BRANCH}:services/users
-  USERS_DB: micro-users_db
+  USERS_DB: micro_users_db
   USERS_DB_REPO: ${MAIN_REPO}#${TRAVIS_BRANCH}:services/users/project/db
-  CLIENT: micro-client
+  CLIENT: micro_client
   CLIENT_REPO: ${MAIN_REPO}#${TRAVIS_BRANCH}:services/client
-  SWAGGER: micro-swagger
+  SWAGGER: micro_swagger
   SWAGGER_REPO: ${MAIN_REPO}#${TRAVIS_BRANCH}:services/swagger
   SECRET_KEY: my_precious
 
